--- a/KikoGuide/Resources/Localization/Guide/v1/en/A Realm Reborn/Dungeons/TheThousandMawsofTotoRak.json
+++ b/KikoGuide/Resources/Localization/Guide/v1/en/A Realm Reborn/Dungeons/TheThousandMawsofTotoRak.json
@@ -1,5 +1,5 @@
 {
-  "Version": 0,
+  "Version": 1,
   "Name": "The Thousand Maws of Toto-Rak",
   "Difficulty": 0,
   "Type": 0,
@@ -7,36 +7,46 @@
   "Level": 24,
   "UnlockQuestID": 66050,
   "TerritoryIDs": [1039],
-  "Bosses": [
+  "Sections": [
     {
+      "Type": 1,
       "Name": "Coeurl O' Nine Tails",
-      "Strategy": "Coeurl O'Nine Tails are encountered twice in the instance. The second Coeurl also spawns two adds.",
-      "Mechanics": [
+      "Phases": [
         {
-          "Name": "Acid Mist",
-          "Description": "Inflicts paralysis to all players hit.",
-          "Type": 4
+          "Strategy": "Coeurl O'Nine Tails are encountered twice in the instance. The second Coeurl also spawns two adds.",
+          "Mechanics": [
+            {
+              "Name": "Acid Mist",
+              "Description": "Inflicts paralysis to all players hit.",
+              "Type": 4
+            }
+          ]
         }
       ]
     },
     {
+      "Type": 1,
       "Name": "Graffias",
-      "Strategy": "There are puddles of green goo surrounding the arena that inflict the Leaden debuff, slowing movement.",
-      "Mechanics": [
+      "Phases": [
         {
-          "Name": "Realm Shaker",
-          "Description": "Instant circle AoE around the boss.",
-          "Type": 2
-        },
-        {
-          "Name": "Silkscreen",
-          "Description": "A line AoE targeting a random player.",
-          "Type": 2
-        },
-        {
-          "Name": "Sticky Web",
-          "Description": "Targets a random player, spawning an untargetable Fleshy Pod add at their position. The pod will then explode in a circle AoE inflicting any players hit with Poison.",
-          "Type": 6
+          "Strategy": "There are puddles of green goo surrounding the arena that inflict the Leaden debuff, slowing movement.",
+          "Mechanics": [
+            {
+              "Name": "Realm Shaker",
+              "Description": "Instant circle AoE around the boss.",
+              "Type": 2
+            },
+            {
+              "Name": "Silkscreen",
+              "Description": "A line AoE targeting a random player.",
+              "Type": 2
+            },
+            {
+              "Name": "Sticky Web",
+              "Description": "Targets a random player, spawning an untargetable Fleshy Pod add at their position. The pod will then explode in a circle AoE inflicting any players hit with Poison.",
+              "Type": 6
+            }
+          ]
         }
       ]
     }
