feat: ui changes and base guide lore support

--- a/KikoGuide/Resources/Localization/Plugin/KikoGuide_Localizable.json
+++ b/KikoGuide/Resources/Localization/Plugin/KikoGuide_Localizable.json
@@ -192,11 +192,11 @@
     "description": "TGuideViewer.get_ReportIssueWithGuide"
   },
   "GuideViewer.UnlockWindowMovement": {
-    "message": "Unlock window movement",
+    "message": "Unlock window",
     "description": "TGuideViewer.get_UnlockWindowMovement"
   },
   "GuideViewer.LockWindowMovement": {
-    "message": "Lock window movement",
+    "message": "Lock window",
     "description": "TGuideViewer.get_LockWindowMovement"
   },
   "GuideViewer.UnlockWindowResize": {
